--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "l'agora",
+  "name": "ionic-project",
   "version": "1.1.1",
-  "description": "l'agora: An Ionic project",
+  "description": "An Ionic project",
   "dependencies": {
+    "angular-youtube-embed": "^1.2.0",
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4"
   },
   "devDependencies": {
     "bower": "^1.3.3",
